# OOP_MAI

./: CMakeLists.txt  main.cpp
include/: Arena.hpp  Array.h  Dragon.hpp  Druid.hpp  Elf.hpp  Figure.h  Hexagon.h  NPC.hpp  NPCFactory.hpp  Observers.hpp  Octagon.h  Pentagon.h  Point.h  array.hpp  bFigure.h  figure.hpp  flat_vector.hpp  hexagon.hpp  octagon.hpp  pentagon.hpp  polygonal.hpp  solution.cpp  solution.h
src/: Arena.cpp  Dragon.cpp  Druid.cpp  Elf.cpp  NPC.cpp  NPCFactory.cpp  Observers.cpp  figure.cpp  flat_vector.cpp  hexagon.cpp  main.cpp  npc.cpp  octagon.cpp  pentagon.cpp  polygonal.cpp
test/: test01.cpp  unit.cpp
tests/: array_tests.cpp  polygonal_tests.cpp  unit.cpp
